@@ -632,7 +632,7 @@ typedef struct RGFW_window_src {
 		HBITMAP bitmap;
 		u8* bitmapBits;
 	#endif
-	RGFW_area maxSize, minSize; /*!< for setting max/min resize (RGFW_WINDOWS) */
+	RGFW_area maxSize, minSize, aspectRatio; /*!< for setting max/min resize (RGFW_WINDOWS) */
 } RGFW_window_src;
 #elif defined(RGFW_UNIX)
 typedef struct RGFW_window_src {
@@ -1689,12 +1689,12 @@ no more event call back defines
     attribs[index++] = v; \
 }
 
-#define RGFW_NO_GPU_RENDER 		RGFW_BIT(20) /* don't render (using the GPU based API)*/
-#define RGFW_NO_CPU_RENDER 		RGFW_BIT(21) /* don't render (using the CPU based buffer rendering)*/
-#define RGFW_HOLD_MOUSE			RGFW_BIT(22) /*!< hold the moues still */
-#define RGFW_MOUSE_LEFT 		RGFW_BIT(23) /* if mouse left the window */
-#define RGFW_WINDOW_ALLOC 		RGFW_BIT(24) /* if window was allocated by RGFW */
-#define RGFW_BUFFER_ALLOC 		RGFW_BIT(25) /* if window.buffer was allocated by RGFW */
+#define RGFW_NO_GPU_RENDER 		RGFW_BIT(25) /* don't render (using the GPU based API)*/
+#define RGFW_NO_CPU_RENDER 		RGFW_BIT(26) /* don't render (using the CPU based buffer rendering)*/
+#define RGFW_HOLD_MOUSE			RGFW_BIT(27) /*!< hold the moues still */
+#define RGFW_MOUSE_LEFT 		RGFW_BIT(28) /* if mouse left the window */
+#define RGFW_WINDOW_ALLOC 		RGFW_BIT(29) /* if window was allocated by RGFW */
+#define RGFW_BUFFER_ALLOC 		RGFW_BIT(30) /* if window.buffer was allocated by RGFW */
 
 RGFW_window* RGFW_createWindow(const char* name, RGFW_rect rect, RGFW_windowFlags flags) {
 	RGFW_window* win = (RGFW_window*)RGFW_ALLOC(sizeof(RGFW_window));
@@ -1718,22 +1718,20 @@ RGFW_window* RGFW_root = NULL;
 
 /* do a basic initialization for RGFW_window, this is to standard it for each OS */
 void RGFW_window_basic_init(RGFW_window* win, RGFW_rect rect, RGFW_windowFlags flags) {
-	/* X11 requires us to have a display to get the screen size */
-	#ifndef RGFW_X11
-	RGFW_area screenR = RGFW_getScreenSize();
-	#else
-	win->src.clipboard = NULL;
-	win->src.display = XOpenDisplay(NULL);
-	RGFW_ASSERT(win->src.display != NULL);
-
-	Screen* scrn = DefaultScreenOfDisplay(win->src.display);
-	RGFW_area screenR = RGFW_AREA((u32)scrn->width, (u32)scrn->height);
-	#endif
-
+	RGFW_UNUSED(flags);
 	/* rect based the requested flags */
 	if (RGFW_root == NULL) {
+		#ifdef RGFW_X11
+		RGFW_root->src.display = XOpenDisplay(NULL);
+		#endif
 		RGFW_root = win;
 	}
+
+	#ifdef RGFW_X11
+	win->src.clipboard = NULL;
+	win->src.display = RGFW_root->src.display;
+	RGFW_ASSERT(win->src.display != NULL);
+	#endif
 
 	#if defined(RGFW_X11) || defined(RGFW_WINDOWS)
 	if (RGFW_hiddenMouse == NULL) {
@@ -1746,7 +1744,7 @@ void RGFW_window_basic_init(RGFW_window* win, RGFW_rect rect, RGFW_windowFlags f
 	win->r = rect;
 	win->event.inFocus = 1;
 	win->event.droppedFilesCount = 0;
-	win->_flags = 0;
+	win->_flags = flags;
 	win->event.keyMod = 0;
 }
 
@@ -1756,16 +1754,16 @@ void RGFW_window_basic_flags(RGFW_window* win, RGFW_windowFlags flags) {
 		RGFW_window_scaleToMonitor(win);
 	#endif
 
+	if (flags & RGFW_windowCenter)
+		RGFW_window_center(win);
+	if (flags & RGFW_windowCenterCursor)
+		RGFW_window_moveMouse(win, RGFW_POINT(win->r.x + (win->r.w / 2), win->r.y + (win->r.h / 2)));
 	if (flags & RGFW_windowNoBorder)
 		RGFW_window_setBorder(win, 0);
 	if (flags & RGFW_windowFullscreen)
 		RGFW_window_fullscreen(win);
 	if (flags & RGFW_windowMaximize)
 		RGFW_window_maximize(win);
-	if (flags & RGFW_windowCenter)
-		RGFW_window_center(win);
-	if (flags & RGFW_windowCenterCursor)
-		RGFW_window_moveMouse(win, RGFW_POINT(win->r.x + (win->r.w / 2), win->r.y + (win->r.h / 2)));
 }
 
 void RGFW_window_initBuffer(RGFW_window* win) {
@@ -1866,6 +1864,11 @@ void RGFW_window_center(RGFW_window* win) {
 	RGFW_ASSERT(win != NULL);
 	RGFW_area screenR = RGFW_getScreenSize();
 	RGFW_window_move(win, RGFW_POINT((screenR.w - win->r.w) / 2, (screenR.h - win->r.h) / 2));
+}
+
+RGFW_bool RGFW_monitor_scaleToWindow(RGFW_monitor mon, RGFW_window* win) {
+	RGFW_ASSERT(win);
+	return RGFW_monitor_scale(mon, RGFW_AREA(win->r.w, win->r.h));
 }
 
 RGFW_bool RGFW_window_shouldClose(RGFW_window* win) {
@@ -3471,8 +3474,6 @@ RGFW_window* RGFW_createWindowPtr(const char* name, RGFW_rect rect, RGFW_windowF
 		win->_flags |= RGFW_windowNoResize;
 	}
 
-	RGFW_window_basic_flags(win, flags);
-
 	XSelectInput(win->src.display, (Drawable) win->src.window, event_mask); /*!< tell X11 what events we want*/
 
 	/* make it so the user can't close the window until the program does*/
@@ -3533,6 +3534,8 @@ RGFW_window* RGFW_createWindowPtr(const char* name, RGFW_rect rect, RGFW_windowF
 	#endif
 	RGFW_window_setMouseDefault(win);
 	RGFW_windowsOpen++;
+	RGFW_window_basic_flags(win, flags);
+
 	return win; /*return newly created window*/
 #endif
 #ifdef RGFW_WAYLAND
@@ -3620,8 +3623,6 @@ RGFW_window* RGFW_createWindowPtr(const char* name, RGFW_rect rect, RGFW_windowF
 					decoration_manager, win->src.xdg_toplevel);
 	}
 
-	RGFW_window_basic_flags(win, flags);
-
 	if (flags & RGFW_windowOpenglSoftware)
 		setenv("LIBGL_ALWAYS_SOFTWARE", "1", 1);
 
@@ -3659,6 +3660,8 @@ RGFW_window* RGFW_createWindowPtr(const char* name, RGFW_rect rect, RGFW_windowF
 	#endif
 
 	RGFW_window_setMouseDefault(win);
+	RGFW_window_basic_flags(win, flags);
+
 	RGFW_windowsOpen++;
 	return win; /*return newly created window*/
 #endif
@@ -5021,11 +5024,6 @@ RGFW_monitor RGFW_getPrimaryMonitor(void) {
 	#endif
 }
 
-RGFW_bool RGFW_monitor_scaleToWindow(RGFW_monitor mon, RGFW_window* win) {
-	RGFW_ASSERT(win);
-	return RGFW_monitor_scale(mon, RGFW_AREA(win->r.w, win->r.h));
-}
-
 RGFW_bool RGFW_monitor_scale(RGFW_monitor mon, RGFW_area area) {
 	RGFW_GOTO_WAYLAND(1);
 #ifdef RGFW_X11
@@ -5268,13 +5266,13 @@ void RGFW_window_close(RGFW_window* win) {
 			glXDestroyContext(win->src.display, win->src.ctx);
 	#endif
 
-		if (win == RGFW_root)
+		if (win == RGFW_root) {
+			XCloseDisplay(win->src.display); /*!< kill the x server connection */
 			RGFW_root = NULL;
-
+		}
+		
 		if ((Drawable) win->src.window)
 			XDestroyWindow(win->src.display, (Drawable) win->src.window); /*!< close the window*/
-
-		XCloseDisplay(win->src.display); /*!< kill the display*/
 	}
 
 	/* set cleared display / window to NULL for error checking */
@@ -5324,7 +5322,6 @@ void RGFW_window_close(RGFW_window* win) {
 
 		#ifdef RGFW_X11
 			XDestroyWindow(win->src.display, (Drawable) win->src.window);
-			XCloseDisplay(win->src.display); /*!< kill the display*/
 		#endif
 
 		#ifdef RGFW_EGL
@@ -5332,6 +5329,9 @@ void RGFW_window_close(RGFW_window* win) {
 		#endif
 
 		if (RGFW_root == win) {
+			#ifdef RGFW_X11
+			XCloseDisplay(win->src.display); /*!< kill connection to the x server */
+			#endif
 			RGFW_root = NULL;
 		}
 
@@ -5574,7 +5574,28 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT message, WPARAM wParam, LPARAM lParam) 
 		RECT clientRect;
 		GetClientRect(hWnd, &clientRect);	
 		i32 offset = (windowRect.bottom - windowRect.top) - (clientRect.bottom - clientRect.top);
+			
+		if (win->src.aspectRatio.w != 0 && win->src.aspectRatio.h != 0) {
+			double aspectRatio = (double)win->src.aspectRatio.w / win->src.aspectRatio.h;
 
+			int width = windowRect.right - windowRect.left;
+			int height = windowRect.bottom - windowRect.top;
+			int newHeight = (int)(width / aspectRatio);
+			int newWidth = (int)(height * aspectRatio);
+
+			if (win->r.w > windowRect.right - windowRect.left || 
+				win->r.h > (windowRect.bottom - windowRect.top) - offset) 
+			{
+				if (newHeight > height) windowRect.right = windowRect.left + newWidth;
+				else windowRect.bottom = windowRect.top + newHeight;
+			} else {
+				if (newHeight < height) windowRect.right = windowRect.left + newWidth;
+				else windowRect.bottom = windowRect.top + newHeight;
+			}
+
+			RGFW_window_resize(win, RGFW_AREA((windowRect.right - windowRect.left), 
+											(windowRect.bottom - windowRect.top) - offset));
+		}
 		RGFW_eventWindow.r.w = windowRect.right -  windowRect.left;
 		RGFW_eventWindow.r.h = (windowRect.bottom - windowRect.top) - offset;
 		RGFW_eventWindow.src.window = hWnd;
@@ -5750,7 +5771,7 @@ RGFW_window* RGFW_createWindowPtr(const char* name, RGFW_rect rect, RGFW_windowF
 	win->src.hIcon = NULL;
 	win->src.maxSize = RGFW_AREA(0, 0);
 	win->src.minSize = RGFW_AREA(0, 0);
-
+	win->src.aspectRatio = RGFW_AREA(0, 0);
 
 	HINSTANCE inh = GetModuleHandleA(NULL);
 
@@ -5982,8 +6003,6 @@ RGFW_window* RGFW_createWindowPtr(const char* name, RGFW_rect rect, RGFW_windowF
 
 	DestroyWindow(dummyWin);
 
-	RGFW_window_basic_flags(win, flags);
-
 	#ifdef RGFW_EGL
 		if ((flags & RGFW_windowNoInitAPI) == 0)
 			RGFW_createOpenGLContext(win);
@@ -6008,6 +6027,7 @@ RGFW_window* RGFW_createWindowPtr(const char* name, RGFW_rect rect, RGFW_windowF
 	}
 
 	ShowWindow(win->src.window, SW_SHOWNORMAL);
+	RGFW_window_basic_flags(win, flags);
 
 	#ifdef RGFW_OPENGL
 	if (RGFW_root != win)
@@ -6070,6 +6090,12 @@ RGFW_point RGFW_window_getMousePoint(RGFW_window* win) {
 	return RGFW_POINT(p.x, p.y);
 }
 
+
+void RGFW_window_setAspectRatio(RGFW_window* win, RGFW_area a) {
+	RGFW_ASSERT(win != NULL);
+	win->src.aspectRatio = a;
+}
+
 void RGFW_window_setMinSize(RGFW_window* win, RGFW_area a) {
 	RGFW_ASSERT(win != NULL);
 	win->src.minSize = a;
@@ -6080,8 +6106,21 @@ void RGFW_window_setMaxSize(RGFW_window* win, RGFW_area a) {
 	win->src.maxSize = a;
 }
 
+void RGFW_window_fullscreen(RGFW_window* win) {
+	RGFW_ASSERT(win != NULL);
+	RGFW_window_hide(win);
+	RGFW_monitor mon = RGFW_window_getMonitor(win);
+	RGFW_window_setBorder(win, 0);
+	SetWindowPos(win->src.window, HWND_TOP, mon.rect.x, mon.rect.y, mon.rect.w, mon.rect.h,
+					SWP_NOOWNERZORDER | SWP_FRAMECHANGED);
+	win->r.w = mon.rect.w;
+	win->r.h = mon.rect.h;
+	RGFW_window_show(win);
+}
+
 void RGFW_window_maximize(RGFW_window* win) {
 	RGFW_ASSERT(win != NULL);
+	RGFW_window_hide(win);
 	ShowWindow(win->src.window, SW_MAXIMIZE);
 }
 
@@ -6708,6 +6747,41 @@ RGFW_monitor* RGFW_getMonitors(void) {
 RGFW_monitor RGFW_window_getMonitor(RGFW_window* win) {
 	HMONITOR src = MonitorFromWindow(win->src.window, MONITOR_DEFAULTTOPRIMARY);
 	return win32CreateMonitor(src);
+}
+
+RGFW_bool RGFW_monitor_scale(RGFW_monitor mon, RGFW_area area) {
+	HMONITOR src = MonitorFromPoint((POINT) { mon.rect.x, mon.rect.y }, MONITOR_DEFAULTTOPRIMARY);
+
+	MONITORINFOEX  monitorInfo;
+	monitorInfo.cbSize = sizeof(MONITORINFOEX);
+	GetMonitorInfoA(src, (LPMONITORINFO)&monitorInfo);
+
+    DISPLAY_DEVICE dd;
+    dd.cb = sizeof(dd);
+
+    // Enumerate display devices
+    for (DWORD deviceNum = 0; EnumDisplayDevices(NULL, deviceNum, &dd, 0); deviceNum++) {
+        if (!(dd.StateFlags & DISPLAY_DEVICE_ACTIVE))
+			continue;
+		
+		DEVMODE dm;
+		ZeroMemory(&dm, sizeof(dm));
+		dm.dmSize = sizeof(dm);
+
+		if (EnumDisplaySettings(dd.DeviceName, ENUM_CURRENT_SETTINGS, &dm)) {
+			dm.dmFields = DM_PELSWIDTH | DM_PELSHEIGHT;
+			dm.dmPelsWidth = area.w;
+			dm.dmPelsHeight = area.h;
+
+			if (ChangeDisplaySettingsEx(dd.DeviceName, &dm, NULL, CDS_TEST, NULL) == DISP_CHANGE_SUCCESSFUL) {
+				if (ChangeDisplaySettingsEx(dd.DeviceName, &dm, NULL, CDS_UPDATEREGISTRY, NULL) == DISP_CHANGE_SUCCESSFUL)
+					return RGFW_TRUE;
+				return RGFW_FALSE;
+			} else return RGFW_FALSE;
+		}
+	}
+
+	return RGFW_FALSE;
 }
 
 #endif
@@ -9486,8 +9560,6 @@ RGFW_window* RGFW_createWindowPtr(const char* name, RGFW_rect rect, RGFW_windowF
 		win->_flags |= RGFW_windowAllowDND;
 	}
 
-	RGFW_window_basic_flags(win, flags);
-
 	EM_ASM({
 		window.addEventListener("keydown",
 			(event) => {
@@ -9563,9 +9635,7 @@ ode			},
 		RGFW_window_showMouse(win, 0);
 	}
 
-	if (flags & RGFW_windowMaximize) {
-		RGFW_window_resize(win, RGFW_getScreenSize());
-	}
+	RGFW_window_basic_flags(win, flags);
 
 	#ifdef RGFW_DEBUG
 	printf("RGFW INFO: a window with a rect of {%i, %i, %i, %i} \n", win->r.x, win->r.y, win->r.w, win->r.h);
