@@ -4,11 +4,12 @@
 #include <stdio.h>
 
 int main(void) {
-    RGFW_window* win = RGFW_createWindow("a window", RGFW_RECT(0, 0, 800, 600), RGFW_windowCenter | RGFW_windowMaximize);
+    RGFW_window* win = RGFW_createWindow("a window", RGFW_RECT(0, 0, 800, 600), RGFW_windowCenter);
+    RGFW_window_makeCurrent(win);
     RGFW_monitor mon = RGFW_window_getMonitor(win);
     RGFW_monitor_scaleToWindow(mon, win);
     RGFW_window_fullscreen(win);
-    
+
     while (RGFW_window_shouldClose(win) == RGFW_FALSE) {
         while (RGFW_window_checkEvent(win));        
         glViewport(0, 0, win->r.w, win->r.h);
@@ -23,6 +24,7 @@ int main(void) {
 
         RGFW_window_swapBuffers(win);
     }
+    
     RGFW_monitor_scale(RGFW_window_getMonitor(win), RGFW_AREA(mon.rect.w, mon.rect.h));
 
     RGFW_window_close(win);
